config/argo-server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argo-ingress
  namespace: argo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: argo.alghanmi.net
    http:
      paths:
      - backend:
          serviceName: argo-server
          servicePort: 2746
  tls:
  - hosts:
    - argo.alghanmi.net
    secretName: argo-server-tls
