config/echo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: echo1.alghanmi.net
    http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 80
  - host: echo2.alghanmi.net
    http:
      paths:
      - backend:
          serviceName: echo2
          servicePort: 80
  tls:
  - hosts:
    - echo1.alghanmi.net
    - echo2.alghanmi.net
    secretName: echo-tls
